--- a/apps/web/templates/projects/index.html.erb
+++ b/apps/web/templates/projects/index.html.erb
@@ -1,10 +1,9 @@
-<h1 class="title">All Projects</h1>
+<h1 class="title is-2">All Projects</h1>
 
-<% projects.each do |project| %>
-  <div class="project">
-    <h2 class="subtitle"><%= project.name %></h2>
-  </div>
-<% end %>
+<div class="project" v-for="project in projects">
+  <h1 class="title">{{ project.name }}</h1>
+  <h2 class="subtitle">{{ project.description }}</h2>
+</div>
 
 <hr/>
 
