Add CSS bundle plugin

--- a/apps/web/templates/application.html.erb
+++ b/apps/web/templates/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title>Projects</title>
     <%= stylesheet 'https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.1/css/bulma.min.css' %>
-    <%= stylesheet 'projects' %>
+    <%= stylesheet 'styles' %>
     <%= favicon %>
   </head>
   <body>
